Use URI/URI.create in LinkResolver to remove exception mess